# rtabmap-zmq-bridge

./: CMakeLists.txt  Dockerfile  README.md  win_pub.py  wsl_sub.py
scripts/: rs2_pub_zmq.py  run_container.sh  sub_rtabmap.py  zmq_pub_simple.py  zmq_sub_simple.py
src/: bridge.cpp  camera_zmq.cpp  camera_zmq.h
